--- a/styles.css
+++ b/styles.css
@@ -43,11 +43,13 @@ body{
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: repeat(5, 1fr);
-   gap: 15px;
+   gap: 30px;
+   row-gap: 15px;
+   margin-top: 10px;
 }
 .frame{
-   width: 150px; 
-   height: 100px;
+   width: 200px; 
+   height: 150px;
    padding: 20px;
    border-radius: 6px;
    display: inline;
@@ -71,8 +73,8 @@ body{
 .frame img{
    width: 40px;
    position: absolute;
-   bottom: 15px;
-   right: 20px;
+   bottom: 30px;
+   right: 30px;
 }
 #supervisor{
    grid-area: 2/2/4/3;
@@ -117,6 +119,7 @@ body{
 #supervisor{
    grid-row: 1;
    grid-column: 1;
+   
 }
 #team-builder{
    grid-row: 2;
