--- a/styles.css
+++ b/styles.css
@@ -1,143 +1,180 @@
+html{
+   width: 100%;
+   height: 100%;
+   font-size: 62.5%;
+   font-family: 'poppins', sans-serif;
+}
+*{
+   box-sizing: border-box;
+   margin: 0;
+   padding: 0;
+}
+
 body{
-   font-family: Poppins, sans-serif;
-   font-style: normal;
-   height: 100vh;
-   width: 100vw;
-   justify-items: center;
-   align-content: center;
-   padding: 30px;
+   height: 100%;
+   width: 100%;   
 }
-.work-area{
-   display: flex;
-   flex-direction: column;
-   justify-content: center;
-   align-items: center;
+header{
+   width: 32rem;
+   height: 15rem;
+   text-align: center;
+   margin: 5rem auto 4rem auto;
 }
-.efficient-delivery-text{
-   font-size: 19px;
-   width: 300px;
+
+header h1{
+   font-size: 2.5rem;
+   margin-bottom: 1rem;
    color: hsl(212, 6%, 44%);
    font-weight: 200;
-   margin-bottom: 0px;
-   text-align: center;
+   line-height: 140%;
+   letter-spacing: 0.025rem;
 }
-.powered-by-technology-text{
-   font-size: 19px;
+header strong{
+   display: block;
    color: hsl(234, 12%, 34%);
    font-weight: 600;
-   margin-top: 0px;
-   margin-bottom: 0px;
-   width: 300px;
-   text-align: center;
 }
-.introduction-text{
-   font-size: 6px;
-   color:  hsl(234, 8%, 53%);
+header p{
+   color: hsl(210, 7%, 59%);
+   font-size: 1.5rem;
    font-weight: 400;
-   width: 210px;
-   justify-self: center;
-   text-align: center;
+   line-height: 120%;
+   letter-spacing: 0.01rem;
 }
-
-.grid-container{
+main{
    display: grid;
-   grid-template-columns: repeat(5, 1fr);
-   grid-template-rows: repeat(5, 1fr);
-   gap: 30px;
-   row-gap: 15px;
-   margin-top: 10px;
+   gap: 3rem;
+   margin-bottom: 3rem; 
 }
-.frame{
-   width: 200px; 
-   height: 150px;
-   padding: 20px;
-   border-radius: 6px;
-   display: inline;
-   background-color:hsl(0, 0%, 100%);
-   border-top: 3px solid;
-   margin-top: 10px;
-   position: relative;
-   box-shadow:  0px 3px 10px lightgray ;
 
+.card{
+   width: 32rem; 
+   height: 22rem;
+   padding: 2rem;
+   border-radius: 0.8rem;
+   background-color:hsl(0, 0%, 100%);
+   position: relative;
+   overflow: hidden;
+   margin: 0 auto 0 auto;
+   box-shadow:  0px 16px 30px -16px rgba(85, 84, 84, 0.3);
 }
-.frame span{
+.card::before{
+   content: " ";
+   height: 0.4rem;
+   width: 100%;
+   background-color: aqua;
+   position: absolute;
+   top: 0;
+   left: 0;  
+}
+.card h2{
+   font-size: 1.7rem;
+   line-height: 140%;
+   margin-bottom: 0.5rem;
    font-weight: 600;
    color:  hsl(234, 12%, 34%);
 }
-.frame p{
-   font-size: 7px;
-   width: 150px;
+.card p{
+   font-size: 1.3rem;
    font-weight: 400;
+   line-height: 160%;
    color: hsl(210, 7%, 59%);
 }
-.frame img{
-   width: 40px;
+.card img{
+   width: 6.5rem;
+   height: 6.5rem;
    position: absolute;
-   bottom: 30px;
-   right: 30px;
+   bottom: 4rem;
+   right: 3rem;
 }
-#supervisor{
-   grid-area: 2/2/4/3;
-   border-color:  hsl(180, 62%, 55%);
+#supervisor::before{
+   background-color:  hsl(180, 62%, 55%);
 }
-#team-builder{
-   grid-area: 1/3/3/4;
-   border-color: hsl(0, 78%, 62%);
+#team-builder::before{
+   background-color: hsl(0, 78%, 62%);
    
 }
-#karma{
-   grid-area: 3/3/5/4;
-   border-color: hsl(34, 97%, 64%);
+#karma::before{
+   background-color: hsl(34, 97%, 64%); 
 }
-#calculator{
-   grid-area: 2/4/4/5;
-   border-color:hsl(212, 86%, 64%);
-}
-
-@media (max-width: 520px){
-.efficient-delivery-text{
-   font-size: 16px;
-}
-.powered-by-technology-text{
-   font-size: 16px;
-}
-.introduction-text{
-   font-size: 10px;
-    width: 200px;
-}
-.grid-container{
-   padding: 10px;
-   justify-items: center;
-   gap: 5px;
-   grid-template-columns: 100%;
-   grid-template-rows: repeat(4, 1fr);
-   margin-bottom: 20px;
-}
-.frame{
-   box-shadow:  0px 3px 10px lightgray ;
-}
-#supervisor{
-   grid-row: 1;
-   grid-column: 1;
-   
-}
-#team-builder{
-   grid-row: 2;
-   grid-column: 1;
-}
-#karma{
-   grid-row: 3;
-   grid-column: 1;
-}
-#calculator{
-   grid-row: 4;
-   grid-column: 1;
-}
-}
+#calculator::before{
+   background-color:hsl(212, 86%, 64%);
+} 
 .attribution { 
-   font-size: 11px;
+   font-size: 1.1rem;
    text-align: center;
 }
 .attribution a {
-   color: hsl(150, 1%, 41%);
+   color: hsl(150, 90%, 27%);
+}
+
+
+@media (min-width: 600px){
+   header{
+      width: 53rem;
+      height: 18rem;
+      margin: 8.5rem auto 3rem auto;  
+   }
+   header h1{
+      font-size: 3.5rem;
+   }
+   main{
+      grid-template-columns: auto auto;
+      grid-template-rows: repeat(3, auto);
+      width: fit-content;
+      height: fit-content;
+      margin: 0 auto 3rem auto;
+      gap: 3rem;
+   }
+   #supervisor{
+      grid-area: 1/1/2/3;  
+   }
+   #team-builder{
+      grid-area: 2/1/3/2;
+   }
+   #karma{
+      grid-area: 2/2/3/3;
+   }
+   #calculator{
+      grid-area: 3/1/4/3;
+   }
+}
+
+
+@media (min-width: 1200px){
+   header{
+      margin: 10rem auto 4rem auto;
+    }
+    header h1{
+      font-size: 4rem ;
+    }
+
+   main{
+      margin: 0rem auto 4rem auto;
+      grid-template-columns: repeat(3, auto);
+      grid-template-rows: auto auto;
+      width: fit-content;
+      height: fit-content;
+      align-items: center;
+   }
+   .card{
+      width: 35rem; 
+   }
+   .card p{
+      width: 28rem;
+      line-height: 180%;
+      letter-spacing: 0.05rem;
+   }
+   #supervisor{
+      grid-area: 1/1/3/2;  
+   }
+   #team-builder{
+      grid-area: 1/2/2/3;
+   }
+   #karma{
+      grid-area: 2/2/3/3;
+   }
+   #calculator{
+      grid-area: 1/3/3/4;
+   }
 }
