--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ main{
 
 .card{
    width: 32rem; 
-   height: 22rem;
+   height: 24rem;
    padding: 2rem;
    border-radius: 0.8rem;
    background-color:hsl(0, 0%, 100%);
@@ -69,16 +69,17 @@ main{
 }
 .card h2{
    font-size: 1.7rem;
-   line-height: 140%;
+   line-height: 160%;
    margin-bottom: 0.5rem;
    font-weight: 600;
+   margin-top: 1rem;
    color:  hsl(234, 12%, 34%);
 }
 .card p{
    font-size: 1.3rem;
    font-weight: 400;
    line-height: 160%;
-   color: hsl(210, 7%, 59%);
+   color: hsl(234, 12%, 34%);
 }
 .card img{
    width: 6.5rem;
